--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "prettier": "^1.16.4",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "prop-types": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
