* 1차 버전 완료   - 최종 완료   - Style 보정은 필요

--- a/package.json
+++ b/package.json
@@ -2,18 +2,22 @@
   "name": "clock",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://keiches.github.io/clock.reactjs",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "prettier": "^1.16.4",
+    "prop-types": "latest",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
-    "react-scripts": "2.1.8",
-    "prop-types": "latest"
+    "react-scripts": "2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
